# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "print3rs-core",
    "print3rs-serializer",
    "print3rs-commands",
    "print3rs-lin3d",
    "print3rs-host3d",
    "print3rs-rtcompat",
]
resolver = "2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[workspace.metadata.dist.dependencies.apt]
libudev-dev = "*"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
strip = true
lto = "thin"
