[package]
name = "gcode-serializer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itoa = "1.0.10"
ryu = "1.0.16"
bytes = "1.5.0"
serde = { version = "1.0.195" }

[dev-dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serial_test = "3"
