[package]
name = "gcode-serializer"
description = "Gcode serde support for comminucating with 3D printers or CNC machines. Part of the print3rs project."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arades79/print3rs"
authors = ["Skyelar Craver <contact@arades.dev>"]
rust-version = "1.76"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itoa = "1.0.10"
ryu = "1.0.16"
serde = { version = "1.0.195" }

[dev-dependencies]
serde = { version = "1.0.195", features = ["derive"] }
