[package]
name = "print3rs-commands"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arades79/print3rs"
authors = ["Skyelar Craver <contact@arades.dev>"]
rust-version = "1.76"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = [
    "rt",
    "macros",
    "io-util",
    "time",
    "fs",
] }
winnow = "0.6"
print3rs-core = { path = "../print3rs-core" }
print3rs-serializer = { path = "../print3rs-serializer" }
tracing = "0.1.40"
futures-util = "0.3.30"
tokio-serial = { version = "5.4.4", features = ["libudev"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.57"
bytes = "1.5.0"
