[package]
name = "print3rs-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.11"
rustyline-async = "0.4.1"
tokio = { version = "1.35.1", features = ["rt", "macros", "io-util", "time", "fs"] }
winnow = "0.5.35"
print3rs-core ={ path = "../print3rs-core"}
gcode-serializer ={ path = "../gcode-serializer"}
tracing = "0.1.40"
futures-util = "0.3.30"
tokio-serial = {version = "5.4.4", features = ["libudev"]}
tracing-subscriber = "0.3.18"
ryu = "1.0.16"
