[package]
name = "print3rs-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.195"
tracing = "0.1.40"
winnow = "0.6"
tokio-serial = { version = "5.4.4" }
tokio = { version = "1.35.1", features = ["rt", "io-util", "sync", "macros"] }
bytes = "1.5.0"
thiserror = "1.0.56"
gcode-serializer = { path = "../gcode-serializer" }
sealed = "0.5.0"
