[package]
name = "print3rs-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arades79/print3rs"
authors = ["Skyelar Craver <contact@arades.dev>"]
rust-version = "1.76"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serde = ["dep:serde", "dep:print3rs-serializer"]
tokio = ["tokio/rt"]
default = ["serde", "tokio"]

[dependencies]
tokio = { version = "1.35.1", features = ["sync"], default_features = false }
serde = { version = "1.0.195", optional = true }
tracing = "0.1.40"
winnow = "0.6"
thiserror = "1.0.56"
print3rs-serializer = { path = "../print3rs-serializer", optional = true }
sealed = "0.5.0"
smol = { version = "2.0.0", optional = true }
futures-lite = "2.3.0"
