[package]
name = "print3rs-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arades79/print3rs"
authors = ["Skyelar Craver <contact@arades.dev>"]
rust-version = "1.76"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serde = ["dep:serde", "dep:print3rs-serializer"]
default = ["serde"]
tokio = ["print3rs-rtcompat/tokio"]
smol = ["print3rs-rtcompat/smol"]

[dependencies]
serde = { version = "1.0.195", optional = true }
tracing = "0.1.40"
winnow = "0.6"
thiserror = "1.0.56"
print3rs-serializer = { path = "../print3rs-serializer", optional = true }
print3rs-rtcompat = { path = "../print3rs-rtcompat" }
sealed = "0.5.0"
futures-lite = "2.3.0"
tokio = { version = "1.36.0", features = ["sync"] }
