[package]
name = "host3d"
description = "Cross-platform graphical 3D-printer host"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/arades79/print3rs"
authors = ["Skyelar Craver <contact@arades.dev>"]
rust-version = "1.76"


[package.metadata.wix]
upgrade-guid = "16760A91-5CF1-464E-88B9-E1803C5F0327"
path-guid = "9CDD86AF-78EF-4967-96C5-88457B62ADE9"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
print3rs-core = { path = "../print3rs-core" }
print3rs-serializer = { path = "../print3rs-serializer" }
print3rs-commands = { path = "../print3rs-commands" }
tokio-serial = { version = "5.4.4", features = ["libudev"] }
tokio = { version = "1.36.0", features = ["rt", "sync", "fs"] }
winnow = "0.6.3"
tokio-stream = { version = "0.1.14", features = ["sync"] }
directories-next = "2.0.0"
rfd = { version = "0.15.0", default-features = false, features = [
    "tokio",
    "gtk3",
] }
open = "5.3.0"
rust-embed = "8.5.0"


[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["dbus-config", "tokio", "winit", "wgpu"]
