[package]
name = "lin3d"
description = "Cross platform console 3D-printer host"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Skyelar Craver <contact@arades.dev>"]
rust-version = "1.76"


[package.metadata.wix]
upgrade-guid = "5DB27F18-CCEF-4B0D-9167-7E9A526A3BCC"
path-guid = "899054C4-7ED4-4405-9AB5-C3BDAA7769F9"
license = false
eula = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline-async = "0.4.2"
tokio = { version = "1.35.1", features = [
    "rt",
    "macros",
    "io-util",
    "time",
    "fs",
] }
winnow = "0.6"
print3rs-core = { path = "../print3rs-core" }
print3rs-serializer = { path = "../print3rs-serializer" }
print3rs-commands = { path = "../print3rs-commands" }
tracing = "0.1.40"
futures-util = "0.3.30"
tokio-serial = { version = "5.4.4", features = ["libudev"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.57"
directories-next = "2.0.0"
