[package]
name = "print3rs-rtcompat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio", "time", "fs", "sync"]
tokio = ["tokio/rt"]
smol = ["dep:smol", "time", "fs", "sync", "dep:async-broadcast"]
time = ["tokio?/time"]
fs = ["tokio?/fs"]
sync = ["tokio?/sync"]

[dependencies]
smol = { version = "2.0.0", optional = true }
tokio = { version = "1.36.0", optional = true }
async-broadcast = { version = "0.7", optional = true }
